fix some small issues and check projects page looks good on mobile

--- a/app/src/assets/css/desktop.scss
+++ b/app/src/assets/css/desktop.scss
@@ -135,6 +135,10 @@ body{
 	animation-delay: 0.5s;
 }
 
+#home-link:hover{
+	cursor: pointer;
+}
+
 #outer-container .description h1{
 	line-height: 30px;
 	color: rgb(45, 48, 122);
