--- a/app/src/assets/css/mobile.scss
+++ b/app/src/assets/css/mobile.scss
@@ -75,6 +75,15 @@
       img{
         width: 100%;
       }
+
+      p{
+        text-align: justify;
+      }
+
+      iframe{
+        width: 100%;
+        height: auto;
+      }
     }
 
     #previous{
